Se mejoro significativamente el rendimiento implementado procesamiento multihilo

--- a/.env.template
+++ b/.env.template
@@ -5,6 +5,23 @@ GITHUB_PROJECT=vscode #repositorio a analizar
 START_DATE=2018-01-01T00:00:00Z #fecha de inicio
 PER_PAGE=100 #número de commits por página
 
+######ADVERTENCIA###### 
+
+#Modificar el siguiente campo puede causar problemas en el sistema, se recomienda no modificar a menos que
+#se conozcan las especificaciones de la máquina en la que se ejecutará. El valor por defecto (10) es el recomendado
+#para la mayoría de los sistemas actuales (procesadores de 4 núcleos o más con 8GB de RAM o más). Para mejorar la
+#eficiciencia se puede aumentar el numero a 20 si tu sistema cumple con las especificaciones (procesadores de 8 
+#núcleos o más con 16GB de RAM o más). Si tu sistema no cumple con las especificaciones se recomienda disminuir
+#el número a 5.
+
+#MODIFICAR BAJO SU PROPIO RIESGO
+
+MAX_WORKERS=10  # Número de hilos para solicitudes paralelas (ajusta según tu sistema)
+
+
+######ADVERTENCIA###### 
+
+
 # Configuración para MongoDB local
 LOCAL_MONGO_HOST=localhost #NO TOCAR
 LOCAL_MONGO_PORT=27017 #NO TOCAR
