Integrar MongoDB Local y Atlas con selección en tiempo de ejecución y mejorar seguimiento del tiempo de ingesta

--- a/.env.template
+++ b/.env.template
@@ -4,6 +4,8 @@ GITHUB_USER=microsoft #usuario del repo a analizar
 GITHUB_PROJECT=vscode #repositorio a analizar
 START_DATE=2018-01-01T00:00:00Z #fecha de inicio
 PER_PAGE=100 #número de commits por página
+DB_NAME= #BBDD
+COLLECTION_NAME= #Colección
 
 ######ADVERTENCIA###### 
 
