Se implemento una mejora en el manejo del rate-limit haciendo uso de varios tokens para evitar interrupciones innecesarias, ademas, mejorado el manejo de errores HTTP

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,15 @@
 # Configuración común
-GITHUB_TOKEN= #Introducir token de GitHub personal
+
+#Pueden usarse tantos tokens como se desee, separados por comas. Ten en cuenta que el rate limit de cada uno
+#se reinicia cada hora, por lo que si el numero de hilos es inferior a 10 es probable que no neceistes mas de 1 token
+#Sin embargo, se recomienda usar al menos 2 siempre para tener una ejecucion sin esperas por el rate limit.
+
+#10 hilos -> 1 token
+#20 hilos -> 2 tokens
+#30 hilos -> 3 tokens
+#etc.
+
+GITHUB_TOKENS=ghp_token1,ghp_token2,ghp_token3  # Lista de tokens separados por comas
 GITHUB_USER=microsoft #usuario del repo a analizar
 GITHUB_PROJECT=vscode #repositorio a analizar
 START_DATE=2018-01-01T00:00:00Z #fecha de inicio
